# GNN-decomp

./: .gitignore  Dockerfile  README.md  build_docker_env.sh  flake.nix  pyproject.toml  requirements.txt
conf/: airfrans_SGD.yaml  airfrans_base.yaml  airfrans_bat.yaml  base.yaml  cifar10_SGD.yaml  cifar10_acc.yaml  cifar10_acc2.yaml  cifar10_base.yaml  cifar10_bat.yaml  cifar10_bat2.yaml  pattern_acc.yaml  pattern_acc2.yaml  pattern_base.yaml  pattern_bat.yaml  pattern_bat2.yaml  wave2d_acc.yaml  wave2d_base.yaml
conf/dev/: a100.yaml  daint.yaml  local.yaml
conf/model/: GCN_Pattern.yaml  GCN_SuperPix.yaml  GraphSAGE.yaml  MeshGraphNet.yaml
mlruns/.trash/770600519877593957/: meta.yaml
mlruns/0/: meta.yaml
mlruns/111111111111111111/: meta.yaml
mlruns/111111111111111111/070128f7db4d4678bac3f68824191d2d/: meta.yaml
mlruns/111111111111111111/10ddf96d888c4c12a53cd0fae9c15273/: meta.yaml
mlruns/143872034252304834/: meta.yaml
mlruns/288797633283989505/: meta.yaml
mlruns/322886214642286671/: meta.yaml
mlruns/656278128290953411/: meta.yaml
mlruns/658982228116011583/: meta.yaml
mlruns/663342273945543318/: meta.yaml
mlruns/663854286568964742/: meta.yaml
mlruns/739847721773837803/: meta.yaml
mlruns/805705663109384938/: meta.yaml
scripts/: run_airfrans.sh  run_cifar.sh  run_wave2d.sh
src/: graclus.py  main.py  models.py  utils.py
src/data/: Wave2D.py  __init__.py
src/models/: GCN_CG.py  GCN_CN.py  GCN_ClsGraph.py  GCN_ClsNode.py  GraphSAGE.py  MeshGraphNet.py  __init__.py  common.py
src/pipelines/: accumulating.py  batched.py  common.py  full_pass.py  pre_accumulating.py  pre_batched.py
src/trainers/: MGN_trainer.py  __init__.py  accumulating.py  batched.py  common.py  pre_accumulating.py  preconditioned.py
(+1962 files in other folders)
