[tool.poetry]
name = "GNN-decomp"
version = "0.1.0"
description = ""
authors = ["ShadowDragon5 <lauriuskas@gmail.com>"]
packages = [
	{ include = "src" }
]


[tool.poetry.dependencies]
python = "^3.10"
torch-geometric = "^2.6.1"
torch = "2.5.0"
scipy = "^1.14.1"
pyg-lib = [
	# { git = "https://github.com/pyg-team/pyg-lib.git", markers = "platform_system == 'Linux' and platform_machine == 'aarch64'" },
	{ version = "^0.4.0", source = "pyg-lib-src", markers = "platform_system == 'Linux' and platform_machine == 'x86_64'" }
]


[tool.poetry.scripts]
main = "src.main:main"


[[tool.poetry.source]]
name = "pyg-lib-src"
url = "https://data.pyg.org/whl/torch-2.5.0+cpu.html"
priority = "explicit"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
