[project]
name = "gnn-decomp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core",
    "hyperopt",
    "matplotlib",
    "mlflow<3",
    "networkx",
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "torch",
    "torch-cluster>=1.6.3",
    "torch-geometric",
    "tqdm",
]

[tool.uv]
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
